--- a/src/App.css
+++ b/src/App.css
@@ -10,17 +10,26 @@
 .App-header {
   background-color: #282c34;
   min-height: 5vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-menu-bar{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
 }
+
+.App-link{
+  text-decoration: none;
+ color: #FFFFFF;
+}
+
+.App-current-link{
+  color:#61dafb;;
+}
+
 
 @keyframes App-logo-spin {
   from {
